tests/specs/graph/fast_check/class_member_ref_additional_prop_on_member.txt
# https://jsr.io/@scope/a/meta.json
{"versions": { "1.0.0": {} } }

# https://jsr.io/@scope/a/1.0.0_meta.json
{ "exports": { ".": "./mod.ts" } }

# https://jsr.io/@scope/a/1.0.0/mod.ts
export class Export {
  prop: MyClass.prototype.member.additional;
}

class MyClass {
  member: string;
}

# mod.ts
import 'jsr:@scope/a'

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "jsr:@scope/a",
          "code": {
            "specifier": "jsr:@scope/a",
            "span": {
              "start": {
                "line": 0,
                "character": 7
              },
              "end": {
                "line": 0,
                "character": 21
              }
            }
          }
        }
      ],
      "size": 22,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    },
    {
      "kind": "esm",
      "size": 106,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/mod.ts"
    }
  ],
  "redirects": {
    "jsr:@scope/a": "https://jsr.io/@scope/a/1.0.0/mod.ts"
  },
  "packages": {
    "@scope/a": "@scope/a@1.0.0"
  }
}

Fast check https://jsr.io/@scope/a/1.0.0/mod.ts:
  error[unsupported-complex-reference]: the reference 'MyClass.prototype.member.additional' from 'Export.prototype.prop' was too complex
   --> https://jsr.io/@scope/a/1.0.0/mod.ts:5:1
    |
  5 | class MyClass {
    | ^^^^^^^^^^^^^^^
  6 |   member: string;
    | ^^^^^^^^^^^^^^^^^
  7 | }
    | ^ this is the reference
    = hint: extract the shared type to a type alias and reference the type alias instead

    info: the reference was too complex to be resolved by fast check
    docs: https://jsr.io/go/slow-type-unsupported-complex-reference

